# EPQ

./: .$the Plan.drawio.bkp  .$the Programming Language Plan.bkp  .$the Programming Language Plan.drawio.bkp  .syncthing.CMakeLists.txt.tmp  CMakeLists.txt  Makefile  README.md  compile_commands.json  lcov.info  run.sh  the Programming Language Plan.drawio
docs/: Assembly Specification.md  High Level Plan.drawio  Music Conversion Specification.txt  PositionInAlphabet.py  Token Overview.drawio  sources.txt
docs/.obsidian/: workspace.json
docs/FAs/: .$datatypes.bkp  .$datatypes.drawio.bkp  .$final-dfa.drawio.bkp  .$final-nfa.drawio.bkp  .$final-nfa.drawio.dtmp  .$final.bkp  .$identifier.drawio.bkp  .$keywords.drawio.bkp  .$literals.drawio.bkp  .$operators.drawio.bkp  .$other.drawio.bkp  .$punctuators.drawio.bkp  .$whitespace.drawio.bkp  datatypes.drawio  final-dfa.drawio  final-nfa.drawio  identifier.drawio  keywords.drawio  literals.drawio  numbers.drawio  operators.drawio  punctuators.drawio  whitespace.drawio
docs/Syntax Trees/: .$First Grammar.bkp  .$First Grammar.drawio.bkp  .$Grammar v2.drawio.bkp  .$Grammar v3.drawio.bkp  .$Grammar.drawio.bkp  .$Left Recursion Removal.drawio.bkp  .$Second Grammar.drawio.bkp  First Grammar  Grammar v1.drawio  Grammar v2.drawio  Grammar v3.drawio  Left Recursion Removal.drawio
src/: CMakeLists.txt  compile.cpp  compile.hpp
src/parser/: parser.cpp  (+3 more)
tests/: .syncthing.test_scanner.cpp.tmp  CMakeLists.txt  integrationTestResult.cpp  test_assembler.cpp  test_generator.cpp  test_grammar.cpp  test_integration.cpp  test_parser.cpp  test_parser_expected_1.hpp  test_parser_expected_2.hpp  test_parser_expected_3.hpp  test_readfile.cpp  test_scanner.cpp  test_semanticAnalyser.cpp  test_treeReducer.cpp  test_util.cpp  treesIdentical.cpp  treesIdentical.hpp  util.cpp  util.hpp
tests/resources/: .syncthing.scanner_pass_1.txt.tmp  .syncthing.scanner_pass_2.txt.tmp  .syncthing.semantic_analysis_fail_1.txt.tmp  .syncthing.semantic_analysis_fail_9.txt.tmp  .syncthing.semantic_analysis_pass_1.txt.tmp  10.txt  generator_1.txt  mr.bayeh  parser_ast_1.txt  parser_ast_2.txt  parser_pass_1.txt  parser_pass_3.txt  scanner_fail_1.txt  scanner_fail_2.txt  scanner_pass_1.txt  scanner_pass_2.txt  semantic_analysis_fail_1.txt  semantic_analysis_fail_10.txt  semantic_analysis_fail_11.txt  semantic_analysis_fail_2.txt  semantic_analysis_fail_3.txt  semantic_analysis_fail_5.txt  semantic_analysis_fail_7.txt  semantic_analysis_fail_8.txt  semantic_analysis_pass_1.txt  semantic_analysis_pass_2.txt
tests/resources/integration/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  36.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
tests/resources/integration/arithmetic/: add.txt  divide.txt  modulus.txt  multiply.txt  sub.txt
tests/resources/integration/assign/: add.txt  modulus.txt
tests/resources/integration/branching/: else_1.txt  else_2.txt  elseif_2.txt  elseif_3.txt  if_1.txt
tests/resources/integration/comparison/: equal.txt  less_equal.txt  not_equal.txt
tests/resources/integration/functions/: call.txt  parameters_1.txt  parameters_2.txt  return.txt
tests/resources/integration/logic/: and.txt  or.txt
tests/resources/integration/loops/: break_1.txt  break_2.txt  continue_1.txt  continue_2.txt  nested_for.txt  while.txt
tests/resources/parser/: pass_1.txt  pass_2.txt  pass_3.txt
tests/resources/scanner/: pass_1.txt  pass_2.txt
tests/resources/semantic-analyser/: fail_1.txt  fail_10.txt  fail_11.txt  fail_12.txt  fail_3.txt  fail_4.txt  fail_6.txt  fail_9.txt  pass_1.txt  pass_2.txt
(+110 files in other folders)
